Fix Login Btn on IE

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -135,26 +135,8 @@ md-sidenav
   background-color #555555 !important
 
 /**********************
- =img thumb
-***********************/
-.img-thumb-container
-  position relative
-  max-width 500px
-  max-height 320px
-  overflow hidden
-
-.img-thumb-main
-  position relative
-  width 100%
-  display block
-
-
-/**********************
  =header
 ***********************/
-.header-social-img
-  @media screen and (max-width: 992px)
-    width 36px !important
 
 .language
   color #E57373 !important
